tdf#147611: fix indices

The maKeyState vector in ScSortParam is initialized with three elements,
and they are never removed. The code in ScVbaRange::Sort incorrectly used
1-based indices into that vector.

This was broken since commit a02b445c39d969fedc554fc2c500b88a27a13906
  Author: Albert Thuswaldner <albert.thuswaldner@gmail.com>
  Date:   Tue Mar 20 19:38:29 2012 +0100

    fdo#45747 remove the limitation to 3 sort entries in calc part1

It was fixed in commit 568d3912bf8ced76ecb9506bccc3bd361daba082
  Author: Kohei Yoshida <kohei.yoshida@gmail.com>
  Date:   Wed Apr 04 15:30:35 2012 -0400

    Cleanup. ScPivot(Collection) is no more.

but was restored by commit 3e887edcaacc5b0f5e35d682a259124648e84229
  Author: Markus Mohrhard <markus.mohrhard@googlemail.com>
  Date:   Thu Apr 5 05:05:40 2012 +0200

    Revert "Cleanup. ScPivot(Collection) is no more."

Change-Id: I009252e794c9365f0aef8a61daf9cbd40eca8b75
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130441
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>